--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,8 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <version>1.7.19</version>
+            <!--<version>1.2.17</version>-->
         </dependency>
 
         <!--web-->
